# AirlineTracker

./: .gitignore  Makefile  Project_Proposal.md  README.md  Team_contract.md  data_formatter  main.cpp  results.md
algorithms/: Makefile  main-algo
cpp-project-template-main/: CMakeLists.txt  Makefile
cpp-project-template-main/algorithms/: CMakeLists.txt  Makefile  main-algo  main.cpp  test-algo  test-dfs
cpp-project-template-main/algorithms/include/: algorithms.h
cpp-project-template-main/algorithms/src/: algorithms.cpp
cpp-project-template-main/algorithms/tests/: DFStest.cpp  test_algorithms.cpp
cpp-project-template-main/parsing/: Makefile  main-parsing  main.cpp  test-parsing
cpp-project-template-main/parsing/include/: graph.h
cpp-project-template-main/parsing/src/: graph.cpp
cpp-project-template-main/parsing/tests/: test_node.cpp  test_parsing.cpp
documents/: ContractFeedback.md  DevLogFeedback.md  Development log.md  MeetingNotes.md  Project_Proposal.md  ProposalFeedback.md  Team_contract - Copy.md  Team_contract.md
parsing/: Makefile  main-parsing  test-parsing
src/: graph.cpp  graph.h
src/data_formatter/: data_formatter.cpp  data_formatter.h  graph.h  graph.hpp  process_nodes.cpp  process_nodes.h
